# MDI_QMMM_Driver

./: .travis.yml  CMakeLists.txt
MDI_QMMM_Driver/: CMakeLists.txt  MDI_QMMM_Driver.cpp  pw_electrostatics.cpp  pw_electrostatics.h
MDI_QMMM_Driver/STUBS_MPI/: mpi.h
tests/locations/: MDI_QMMM_Driver
tests/water/: mpi.sh  ref  tcp.sh
tests/water/data/: lammps_main.in  lammps_sub.in  qe.in
tools/: lammps_build.sh
